Website/css/main.css
:root {
    --main: ;
    --second: ;
    --nav: ;
}

/*font/body*/
@font-face {
    font-family: Pacifico;
    src: url(../font/Pacifico.ttf);
}

@font-face {
    font-family: PatrickHand;
    src: url(../font/PatrickHand-Regular.ttf);
}


.wrapper {
    max-width: 1632px;
    margin: 0 auto;
}

body {
    background-image: linear-gradient(#00FFFF, #EADDCA);
    background-size: cover;
    min-height: 100vh;
}

/*        */
/* NAVBAR */
/*        */
nav {
    background-color: var(--nav);
}
h1{
    font-family: Pacifico;
    font-size: 40px;
}
.navbar {
    padding: 10px 0;
    display: flex;
    justify-content: space-around;
}

.navbar a {
    text-decoration: none;
    color: black;
    padding: 0 10px;
    font-size: 18px;
}

.active {
    background: white;
    border: 1px solid white;
    border-radius: 50px;
}

/* FOOTER */
footer{
    background-color: black;
}

footer .wrapper{
    display: flex;
    justify-content: space-evenly;
    align-items: baseline;
    color: red;
}

.pagesFooter a{
    text-decoration: none;
    color: red;
    padding: 10px;
}

.socialsFooter a{
    margin: 5px;
}

.fa-facebook {
    color: red;
    text-decoration: none;
}

.fa-twitter {
    color: red;
    text-decoration: none;
  }

.fa-instagram {
    color: red;
    text-decoration: none;
}

.fa-youtube {
    color: red;
    text-decoration: none;
}

